# freightbidbench

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  FREIGHTBIDBENCH.md  LICENSE  LICENSE-DATA  Makefile  README.md  freight_stochastic_networks_realtime_bid_eval.md  freightbidbench_experiment_blueprint.md  literature_matrix.md  public_data_inventory.md  pyproject.toml  requirements.txt
configs/: freightbidbench_v02_scenarios.json  freightbidbench_v03_scenarios.json  freightbidbench_v04_dev_scaling.json  freightbidbench_v04_scenarios.json
docs/: ablation_protocol.md  adding_policies.md  benchmark_spec.md  csv_column_dictionary.md  github_release.md
examples/: quickstart.sh
papers/: benchmark_release_checklist.md  cover_letter.md  dissemination_plan.md  freightbidbench_trb2027.tex  freightbidbench_v02_benchmark_paper.md  freightbidbench_v02_benchmark_paper.tex  freightbidbench_v03_benchmark_paper.md  freightbidbench_v03_benchmark_paper.tex  freightbidbench_v03_path_a_workplan.md  freightbidbench_v03_path_b_workplan.md  freightbidbench_v03_runbook.md  freightbidbench_v03_workplan.md  freightbidbench_v04_dual_price_workplan.md  freightbidbench_v04_methods_paper.md  frontmatter.md  references.bib  submission_checklist.md  theorem_b_working_note.md  trbunofficial.cls
reports/: calibration_report.md  closed_loop_baseline_report.md  demand_wave_sweep_report.md  experimental_package_report.md  feasibility_ablation_standard_report.md  gap_kernel_search.md  gap_kernel_search_s2.md  gap_kernel_search_s3.md  gap_kernel_search_s4.md  initial_calibration_report.md  opportunity_cost_sanity_report.md  relaxed_bound_report.md  rollout_teacher_report.md  service_failure_penalty_sweep_report.md  surrogate_cascade_report.md  surrogate_feature_track_report.md  terminal_value_sweep_report.md
scripts/: analyze_calibration.py  analyze_policy_deltas.py  assemble_v03_paper_tables.py  find_gap_kernel.py  fit_dual_prices.py  fit_value_togo.py  freight_feasibility.py  inspect_public_sources.py  plot_freightbidbench.py  run_30seed_program.sh  run_closed_loop_baselines.py  run_demand_wave_sweep.py  run_dual_price_experiment.py  run_experimental_package.py  (+10 more)
(+654 files in other folders)
